[package]
name = "pixelletter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.32.0", features = ["serialize"] }
isocountry = "0.3.2"
thiserror = "1.0"
anyhow = "1"
bon = "2.3"
